src/objects/Movie__c.object
<CustomObject>
    <fields>
        <fullName>Adult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MovieId__c</fullName>
        <label>Movie Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLanguage__c</fullName>
        <label>Original Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalTitle__c</fullName>
        <label>Original Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PosterPath__c</fullName>
        <label>Poster Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>Release Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Movie</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>